# rustfull

./: .gitignore  Cargo.toml  Makefile  README.md  start.sh
backend/: Cargo.toml  docker-compose.yml
backend/migrations/: 0001_product_table.up.sql
backend/src/: db.rs  handler.rs  main.rs  product_model.rs  schema.rs
backend/src/api/: config.rs  healthcheck.rs  mod.rs  product.rs
backend/src/config/: cors.rs  db.rs  mod.rs
backend/src/handler/: config.rs  product.rs
common/: Cargo.toml
common/src/: lib.rs
common/src/model/: category_catelogue.rs  mod.rs  product.rs
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: api.rs  api_old.rs  lib.rs  main.rs  store.rs
frontend/src/api/: product.rs
frontend/src/components/: alert.rs  mod.rs  product_form.rs  product_list.rs  single_product.rs
frontend/src/views/: category_catalogue.rs  home.rs  mod.rs  products.rs  search_product.rs
migrations/: 0001_product_table.up.sql
src/: handler.rs  main.rs  product_model.rs  schema.rs
