[package]
name = "postgres-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7.1", features = ["postgres", "runtime-tokio-rustls"] }
actix-web = "4.4.0"
env_logger = "0.10.0"
serde_json = "1.0.105"
