[package]
name = "postgres-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7.1", features = [
    "runtime-async-std-native-tls",
    "postgres",
    "uuid",
    "chrono",
] }
actix-web = "4.4.0"
actix-cors = "0.6.4"
serde_json = "1.0.105"
serde = { version = "1.0.188", features = ["derive"] }
chrono = { version = "0.4.29", features = ["serde"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
