[package]
name = "rustfull"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }

[workspace]
members = ["backend", "common", "frontend"]

[lib]
name = "common"            # Replace with your library name
path = "common/src/lib.rs"
